# workshop_univel_out_2025

./: .gitignore  Desenvolvimento de Agentes Inteligentes com Python e OpenAI.pptx  test_chat.json  test_chat_finance.json  test_chat_general.json  test_chat_search.json
01-setup/: .env.example  .gitignore  Dockerfile  Makefile  README.md  SLIDES.md  docker-compose.yml  pyproject.toml
01-setup/app/: __init__.py  config.py  llm_sanity.py  qdrant_sanity.py  redis_sanity.py
01-setup/scripts/: __init__.py  bootstrap.sh  check_env.py
library-ai-system/: .env_exemple  ANALISE_SISTEMA_IA.md  FINAL_STATUS_REDIS_CELERY.md  QDRANT_FIX_SUCCESS.md  README.md  REDIS_CELERY_STATUS.md  STATUS_FINAL.md  TESTING.md  docker-compose.yml  test_api.py  test_books.py  test_embeddings.py  test_login.py  test_manual_embeddings.py  test_no_hang.py  test_qdrant_only.py  test_real_content.py  test_register.py  test_upload.py
library-ai-system/api/: Dockerfile  requirements.txt
library-ai-system/api/library_backend/: __init__.py  celery_app.py  database.py  main.py
library-ai-system/api/library_backend/core/: __init__.py  auth.py
library-ai-system/api/library_backend/dto/: __init__.py  book_dto.py  chat_dto.py  user_dto.py
library-ai-system/api/library_backend/models/: __init__.py
library-ai-system/api/library_backend/routes/: __init__.py  auth.py  books.py  chat.py  tasks.py  users.py
library-ai-system/init-scripts/: 01-init.sql  02-add-task-id.sql
library-ai-system/mcp-server/: Dockerfile  library_mcp_server.py  requirements.txt
library-ai-system/scripts/: start_celery.sh
(+6 files in other folders)
